Sửa xong layout nhưng bị mất thông tin cá nhân bên ClassRooms -> Index

--- a/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
@@ -6,9 +6,9 @@
 }
 
 
-<h1 style="color: #FA7070; padding-bottom:20px; text-align:center;">QUẢN LÝ NGƯỜI DÙNG</h1>
+<h1 style="color: #FA7070; padding-bottom:20px; padding-top:20px;text-align:center;">QUẢN LÝ NGƯỜI DÙNG</h1>
 
-	 <table class="table" @* style="font-size: 20px;  border-collapse: collapse;border: 1px solid #000; border-right: none; border-right: 1px solid #000; ;" *@>
+<table class="table" @* style="font-size: 20px; border-collapse: collapse;border: 1px solid #000; border-right: none; border-right: 1px solid #000; ;" *@>
 	<thead>
 		<tr>
 			@* <th>Mã người dùng</th> *@
