sửa lecture, gán lại link cho BT

--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -524,7 +524,7 @@
 					</div>
 		}
 	}
-	<div class="posts" id="lectureContainer">
+	<div class="posts" id="lectureContainer" style="height: 600px;">
 		<partial name="_lecturePartial" model="Model.Unit" />
 	</div>
 
