--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -50,30 +50,30 @@
     }
 
     /* Định dạng menu dọc */
-    .vertical-menu {
+    .vertical-menu1 {
         list-style-type: none; /* Loại bỏ các dấu hiệu đầu mục của danh sách */
         padding: 0; /* Xóa khoảng trống trong danh sách */
     }
 
-        /* Định dạng mỗi mục menu */
-        .vertical-menu li {
-            margin-bottom: 0; /* Khoảng cách giữa các mục menu */
-        }
+    /* Định dạng mỗi mục menu */
+    .vertical-menu1 li {
+        margin-bottom: 0; /* Khoảng cách giữa các mục menu */
+    }
 
-            /* Định dạng liên kết trong mỗi mục menu */
-            .vertical-menu li a {
-                display: block; /* Chuyển liên kết thành khối để nó chiếm toàn bộ chiều rộng của mục */
-                padding: 10px; /* Khoảng cách giữa văn bản và viền của mục */
-                text-decoration: none; /* Loại bỏ gạch chân mặc định của liên kết */
-                color: #333; /* Màu chữ */
-                background-color: #f0f0f0; /* Màu nền của mục */
-                border-bottom: 1px solid #ccc; /* Thêm dấu gạch ngang */
-            }
+    /* Định dạng liên kết trong mỗi mục menu */
+    .vertical-menu1 li a {
+        display: block; /* Chuyển liên kết thành khối để nó chiếm toàn bộ chiều rộng của mục */
+        padding: 10px; /* Khoảng cách giữa văn bản và viền của mục */
+        text-decoration: none; /* Loại bỏ gạch chân mặc định của liên kết */
+        color: #333; /* Màu chữ */
+        background-color: #f0f0f0; /* Màu nền của mục */
+        border-bottom: 1px solid #ccc; /* Thêm dấu gạch ngang */
+    }
 
                 /* Định dạng mục menu được chọn */
-                .vertical-menu li a:hover {
-                    background-color: #ccc; /* Màu nền khi rê chuột qua */
-                }
+    .vertical-menu1 li a:hover {
+        background-color: #ccc; /* Màu nền khi rê chuột qua */
+    }
 
     /* chính----------------------------------------------*/
     .main-content {
@@ -241,7 +241,7 @@
         <center>
             <p>@user.Name</p>
         </center>
-        <ul class="vertical-menu">
+        <ul class="vertical-menu1">
             <li><a href="/Identity/Account/Manage/Index">Thông tin cá nhân</a></li>
         </ul>
     </div>
