--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -555,7 +555,7 @@
                 <ul class="menu">
                     <li><a href="/Home/Index">Trang chủ</a></li>
                     <li><a href="/ClassRooms">Lớp học</a></li>
-                    <li><a href="/ClassRooms/GetAllHomeWork">Bài tập</a></li>
+                    <li><a href="/BaiTaps">Bài tập</a></li>
 
                 </ul>
                 <div class="login-item">
@@ -567,7 +567,7 @@
                 <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
                 <a href="/Home/Index">Trang chủ</a>
                 <a href="/ClassRooms">Lớp học</a>
-                <a href="/ClassRooms/GetAllHomeWork">Bài tập</a>
+                <a href="/BaiTaps">Bài tập</a>
                 <a href="https://sinhvien.hutech.edu.vn/#/sinhvien/login/login">Sinh viên Hutech</a>
                 <a href="https://daotao.hutech.edu.vn/>">Cổng Thông Tin Đào Tạo</a>
                 <a href="https://e-graduate.hutech.edu.vn/">E-Learning Hutech</a>
