Edit phần title, side left trang chủ , footer

--- a/DoAnMon/Areas/Admin/Views/Home/DSbaipost.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/DSbaipost.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "DSbaipost";
+    ViewData["Title"] = "Posts List";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 <style>
