--- a/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
@@ -1,7 +1,7 @@
 ﻿@using DoAnMon.Areas.Admin.Models
 @model IEnumerable<UserViewModel>
 @{
-	ViewData["Title"] = "Index";
+	ViewData["Title"] = "User Manager";
 	Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
