--- a/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - DoAnMon</title>
+	<title>Create Post - Only A</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/DoAnMon.styles.css" asp-append-version="true" />
-	<link rel="icon" href="/pics/exam.ico" type="image/x-icon">
+	<link rel="icon" type="image/x-icon" href="/images/Logo_Web.png" />
 	<style>
 		/* Định dạng chung cho liên kết */
 		a.admin-link {
