--- a/DoAnMon/Areas/Identity/Pages/Account/Index.cshtml
+++ b/DoAnMon/Areas/Identity/Pages/Account/Index.cshtml
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="/images/Logo_Web.png" />
+    <title>Login/Register - Only A</title>
 </head>
 <body>
     <div class="container" id="container">
