--- a/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,12 +16,12 @@
 		width: 1000px
 	}
 
-	.left-column {
+	.left-column1 {
 		width: 30%;
 		margin-right: 20px;
 	}
 
-	.right-column {
+	.right-column1 {
 		width: 70%;
 	}
 
@@ -71,18 +71,18 @@
 		@* <partial name="_StatusMessage" for="StatusMessage" /> *@
 		<form id="profile-form" method="post" enctype="multipart/form-data">
 			<div class="container">
-				<div class="left-column">
+				<div class="left-column1">
 					<div class="profile-img">
 						<div class="image-container" id="image-container">
 
 							<div class="image-container" id="image-container">
 								@if (string.IsNullOrEmpty(@Model.Input.ProfilePictureUrl))
 								{
-									<img id="selected-image" src="/Images/avatar.jpg" alt="No Image" />
+									<img id="selected-image" src="/Images/avatar.jpg" alt="No Image" style="object-fit:cover;" />
 								}
 								else
 								{
-									<img id="selected-image" src="/Imgs_avtUser/@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" />
+									<img id="selected-image" src="/Imgs_avtUser/@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" style="object-fit:cover;" />
 
 								}
 							</div>
@@ -93,7 +93,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="right-column" id="right-column">
+				<div class="right-column1" id="right-column">
 					<div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 					<div class="form-group">
 						<label asp-for="Username">MSSV</label>
