--- a/DoAnMon/Views/BaiTaps/Index.cshtml
+++ b/DoAnMon/Views/BaiTaps/Index.cshtml
@@ -2,7 +2,7 @@
 @model PaginatedList<DoAnMon.Models.BaiTap>
 
 @{
-	ViewData["Title"] = "GetAllHomeWork";
+	ViewData["Title"] = "Danh sách bài tập";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
