--- a/DoAnMon/Views/Home/Index.cshtml
+++ b/DoAnMon/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "OnlyA";
+    ViewData["Title"] = "Trang chủ";
 }
 <div class="container">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
