--- a/DoAnMon/Areas/Admin/Views/Home/baipost.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/baipost.cshtml
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Only A</title>
+    <link rel="icon" type="image/x-icon" href="/images/Logo_Web.png" />
 </head>
 <body>
     <style>
