--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -8,7 +8,8 @@
 @model ClassRoomViewModel
 
 @{
-	ViewData["Title"] = "Details";
+	string tenlop = Model.ClassRoom.Name;
+	ViewData["Title"] = tenlop;
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
