--- a/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -47,7 +47,7 @@
 			var minutes = currentDateTime.getMinutes();
 			var seconds = currentDateTime.getSeconds();
 			var day = currentDateTime.getDate();
-			var month = currentDateTime.getMonth() + 1; // Tháng bắt đầu từ 0
+			var month = currentDateTime.getMonth() + 1;
 			var year = currentDateTime.getFullYear();
 			var weekday = currentDateTime.getDay();
 
