Thêm loading khi đang lấy bài post bằng API

--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -231,6 +231,11 @@
                 max-width: 500px;
             }
 
+            .main-content h3{
+                font-size: 45px;
+                font-weight: bold;
+            }
+
 
         /*PHẦN NỘI DUNG BÊN PHẢI*/
         .sidebar-right {
