--- a/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
@@ -48,6 +48,7 @@
 		}
 	</tbody>
 </table> 
+<a style="text-align: center;display: flex;justify-content: center;" href="/Admin/Home/DSbaipost">Danh sách bài post</a>
 @if (TempData["AlertMessage"] != null)
 {
     <script>
