--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -706,7 +706,7 @@
                 <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
                 <a href="/Home/Index">Trang chủ</a>
                 <a href="/ClassRooms">Lớp học</a>
-                <a href="/BaiTaps">Bài tập</a>
+                <a class="bt" href="/BaiTaps">Bài tập</a>
                 <a href="https://sinhvien.hutech.edu.vn/#/sinhvien/login/login">Sinh viên Hutech</a>
                 <a href="https://daotao.hutech.edu.vn/>">Cổng Thông Tin Đào Tạo</a>
                 <a href="https://e-graduate.hutech.edu.vn/">E-Learning Hutech</a>
